--- a/charts/unbind/templates/sa.yaml
+++ b/charts/unbind/templates/sa.yaml
@@ -108,6 +108,9 @@ rules:
       "events"
     ]
     verbs: ["get", "list", "watch"]
+  - apiGroups: ["storage.k8s.io"]
+    resources: ["storageclasses"]
+    verbs: ["get", "list", "watch"]
 ---
 # NEW: ClusterRole for resource management permissions
 apiVersion: rbac.authorization.k8s.io/v1
