--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -454,13 +454,18 @@ releases:
               REGISTRY_USERNAME="{{ .Values | get "externalRegistry.username" "" }}"
               REGISTRY_PASSWORD="{{ .Values | get "externalRegistry.password" "" }}"
               
-              # Create registry credentials for external registry
-              kubectl create secret generic registry-credentials \
-                --namespace="$NAMESPACE" \
-                --from-literal=username="${REGISTRY_USERNAME}" \
-                --from-literal=password="${REGISTRY_PASSWORD}"
+              # Create registry credentials for external registry using retry logic
+              echo "Creating registry-credentials secret for external registry..."
+              if ! retry_command "kubectl create secret generic registry-credentials --namespace=\"$NAMESPACE\" --from-literal=username=\"${REGISTRY_USERNAME}\" --from-literal=password=\"${REGISTRY_PASSWORD}\""; then
+                if kubectl get secret registry-credentials -n "$NAMESPACE" &>/dev/null; then
+                  echo -e "${YELLOW}Registry credentials secret already exists. Skipping creation.${NC}"
+                else
+                  echo -e "${RED}Failed to create registry-credentials secret after multiple attempts${NC}"
+                  exit 1
+                fi
+              fi
               
-              echo "Registry credentials created for external registry: $REGISTRY_HOST"
+              echo -e "${GREEN}Registry credentials created for external registry: $REGISTRY_HOST${NC}"
               exit 0
             fi
 
